Add phpcs, xdebug

--- a/php-8.3/configs/php.ini
+++ b/php-8.3/configs/php.ini
@@ -938,14 +938,14 @@ default_socket_timeout = 60
 ;extension=ffi
 ;extension=ftp
 ;extension=fileinfo
-;extension=gd
+extension=gd
 ;extension=gettext
 ;extension=gmp
-;extension=intl
+extension=intl
 ;extension=imap
-;extension=mbstring
-;extension=exif      ; Must be after mbstring as it depends on it
-;extension=mysqli
+extension=mbstring
+extension=exif      ; Must be after mbstring as it depends on it
+extension=mysqli
 ;extension=oci8_12c  ; Use with Oracle Database 12c Instant Client
 ;extension=oci8_19  ; Use with Oracle Database 19 Instant Client
 ;extension=odbc
@@ -963,15 +963,17 @@ default_socket_timeout = 60
 ; See https://www.php.net/manual/en/snmp.installation.php
 ;extension=snmp
 
-;extension=soap
+extension=soap
 ;extension=sockets
-;extension=sodium
+extension=sodium
 ;extension=sqlite3
 ;extension=tidy
 ;extension=xsl
-;extension=zip
+extension=zip
 
-;zend_extension=opcache
+zend_extension=opcache
+
+zend_extension=xdebug
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
