--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     ports:
       - "${MOODLE_PORT}:${MOODLE_PORT}"
     environment:
-      XDEBUG_CONFIG: client_host=host.docker.internal
+      PHP_IDE_CONFIG: "serverName=${PHPSTORM_SERVER_NAME}"
     restart: always
     volumes:
       - ./moodle:/var/www/html/moodle/
       - ./moodledata:/var/www/html/moodledata/
-      - ./php-8.3/php.ini:/usr/local/etc/php/php.ini
+      - ./php-8.3/configs:/usr/local/etc/php
     depends_on:
       - mysql-8.4
     profiles:
