--- a/.env
+++ b/.env
@@ -2,9 +2,7 @@ MYSQL_DATABASE=moodle
 MYSQL_ROOT_PASSWORD=123
 MYSQL_USER=moodleuser
 MYSQL_PASSWORD=yourpassword
-
-MYSQL_5_7_PORT=3307
-MYSQL_8_4_PORT=3306
+MYSQL_PORT=3306
 
 MOODLE_PORT=8000
 
