--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@ MYSQL_DATABASE=moodle
 MYSQL_ROOT_PASSWORD=123
 MYSQL_USER=moodleuser
 MYSQL_PASSWORD=yourpassword
-MYSQL_PORT=3306
+
+
+MYSQL_84_PORT=3306
+MYSQL_57_PORT=3307
 
 MOODLE_PORT=8000
 
