--- a/.env
+++ b/.env
@@ -3,9 +3,15 @@ MYSQL_ROOT_PASSWORD=123
 MYSQL_USER=moodleuser
 MYSQL_PASSWORD=yourpassword
 
-
 MYSQL_84_PORT=3306
 MYSQL_57_PORT=3307
+
+
+POSTGRES_DB=moodle
+POSTGRES_PASSWORD=yourpassword
+POSTGRES_USER=moodleuser
+
+POSTGRES_PORT=5432
 
 MOODLE_PORT=8000
 
