--- a/php/configs/php.ini
+++ b/php/configs/php.ini
@@ -941,7 +941,7 @@ extension=mysqli
 ;extension=pdo_odbc
 ;extension=pdo_pgsql
 ;extension=pdo_sqlite
-;extension=pgsql
+extension=pgsql
 ;extension=shmop
 
 ; The MIBS data available in the PHP distribution must be installed.
