--- a/php/configs/php.ini
+++ b/php/configs/php.ini
@@ -943,7 +943,7 @@ extension=gd
 ;extension=gmp
 extension=intl
 ;extension=imap
-extension=mbstring
+;extension=mbstring
 extension=exif
 extension=mysqli
 ;extension=oci8_12c  ; Use with Oracle Database 12c Instant Client
