--- a/.env
+++ b/.env
@@ -1,18 +1,8 @@
-MYSQL_DATABASE=moodle
-MYSQL_ROOT_PASSWORD=123
-MYSQL_USER=moodleuser
-MYSQL_PASSWORD=yourpassword
+DB_NAME=moodle
+DB_PASSWORD=yourpassword
+DB_USER=moodleuser
 
-MYSQL_84_PORT=3306
-MYSQL_57_PORT=3307
-
-
-POSTGRES_DB=moodle
-POSTGRES_PASSWORD=yourpassword
-POSTGRES_USER=moodleuser
-
-POSTGRES_PORT=5432
-
+DB_PORT=3355
 MOODLE_PORT=8000
 
 PHPSTORM_SERVER_NAME=moodle-docker-server
