--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  php:
-    build: ./php
-    container_name: php
+  php80:
+    build: ./php80
+    container_name: php80
     command: php -S 0.0.0.0:8000 -t /var/www/html/moodle/
     ports:
       - "${MOODLE_PORT}:8000"
@@ -11,38 +11,24 @@ services:
     volumes:
       - ./moodle:/var/www/html/moodle/
       - ./moodledata:/var/www/html/moodledata/
-      - ./php/configs:/usr/local/etc/php
+      - ./php80/configs:/usr/local/etc/php
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
 
-  mysql84:
-    image: mysql:8.4
-    container_name: mysql84
+  mysql:
+    image: mysql:latest
+    container_name: mysql
     restart: unless-stopped
     ports:
-      - "${MYSQL_84_PORT}:3306"
+      - "${DB_PORT}:3306"
     environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
     volumes:
-      - ./mysql84/data:/var/lib/mysql
-
-  mysql57:
-    image: mysql:5.7
-    container_name: mysql57
-    restart: unless-stopped
-    ports:
-      - "${MYSQL_57_PORT}:3306"
-    environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-    volumes:
-      - ./mysql57/data:/var/lib/mysql
+      - ./db-data/mysql:/var/lib/mysql
 
   postgres:
     image: postgres:latest
@@ -51,8 +37,8 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_USER=${DB_USER}
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
