Add configure script

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 DB_NAME=moodle
 DB_PASSWORD=yourpassword
 DB_USER=moodleuser
-
 DB_PORT=3355
+
+MOODLE_HOST=localhost
 MOODLE_PORT=8000
 
 PHPSTORM_SERVER_NAME=moodle-docker-server
