--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,4 +41,4 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
     volumes:
-      - ./postgres/data:/var/lib/postgresql/data
+      - ./db-data/postgres:/var/lib/postgresql/data
